--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  inputs:
+   inputs:
       environment:
         description: 'Environment to run tests against'
         type: environment
@@ -32,7 +32,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: ${{ inputs.environment }}
+        run: echo ${{ inputs.environment }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
