--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,7 @@ on:
    inputs:
       environment:
         description: 'Environment to run tests against'
-        type: environment
+        type: string
         required: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
